@@ -4,6 +4,7 @@ let tests =
   [ Test_toplevel.test_1;
     Test_toplevel.test_2;
     Test_pmap.test_1;
+    Test_pmap.test_2;
     Test_vect.test_1;
     Test_vect.test_2;
     Test_vect.test_3;
