@@ -6,7 +6,7 @@ let test_1 =
   ("Strings: Taking and skipping",
    
    fun () -> let foo s : string list = let e = enum s in 
-     [? List : of_enum (f e) | f <- List : open Enum in [take 5; skip 3 |- take 5; take 5 ; identity]]
+     [? List : of_enum (f e) | f <- List : open Enum in [take 5; skip 3 |- take 5; take 5 ; identity] ?]
    in
   let result   = foo string
   and expected = ["Jon \""; "dog\" "; "Orwan"; "t"]
